paper/results/run4/httpx-decoders-L224-arithmetic_swap/bca_d1/4000/dev_report/test_output.txt
File "<frozen importlib._bootstrap>", line 1126, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/__init__.py", line 2, in <module>
    from .handlers import ASGIHandler, WSGIHandler
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py", line 185, in exec_module
    exec(co, module.__dict__)
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/respx/handlers.py", line 3, in <module>
    import httpx
  File "/Users/akshankrithick/projects/httpx/httpx/__init__.py", line 2, in <module>
    from ._api import *
  File "/Users/akshankrithick/projects/httpx/httpx/_api.py", line 6, in <module>
    from ._client import Client
  File "/Users/akshankrithick/projects/httpx/httpx/_client.py", line 13, in <module>
    from ._auth import Auth, BasicAuth, FunctionAuth
  File "/Users/akshankrithick/projects/httpx/httpx/_auth.py", line 12, in <module>
    from ._models import Cookies, Request, Response
  File "/Users/akshankrithick/projects/httpx/httpx/_models.py", line 474
    self._content = b"".join(await self.stream)
                             ^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function